css/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');

/* Bandaid solution to empty white bar. It works on desktop but broke mobile */
html {
	overflow-x: hidden;
}

body {
	font-family: 'Open Sans', sans-serif;
}

#navbarAbout p {
	text-align: justify;
	color: lightgray;
}

#navbarContact li {
	color: lightgray;
}

#navbarContact a {
	color: lightgray;
}

.portrait
{
	object-fit: scale-down;
	max-height: 200px;
}

.btn {
	box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 12px;
	transition: all 0.3s ease 0s;
}

.btn:hover {
	/* transform: scale(0.98); */
	transform: translateY(-2.5px);
	box-shadow: 0px 4px 12px rgba(106, 160, 118, 0.45);
}

.modal-footer .btn:hover {
	background-color: white;
	color: gray;
}

/* Showcase (Over Video) */

#about h2 {
	margin: 10px 0;
	font-weight: 300;
	font-size: 60px;
	line-height: 1.2;
}

#about h4 {
	font-weight: 400;
	margin: 15px 0;
}

#about h5 {
	margin: 10px 0;
	font-weight: 100;
	text-align: justify;
	max-width: 600px;
}

/* VIDEO SHOWCASE */
.showcase {
	position: relative;
	height: 45vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
	padding: 0 20px;
}


.video-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.content {
	z-index: 10;
}

.video-container video {
	min-width: 100%;
	min-height: 100%;
	object-fit: cover;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.video-container:after {
	content:'';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0.45);
}

/* END VIDEO SHOWCASE */

@media screen and (max-width: 800px) {
	.showcase {
		height: auto;
	}

	.capstone {
		height: auto;
	}
}

/* CAPSTONE SECTION */

.capstone {
	display: flex;
	flex-direction: row;
	height: 50vh;
	align-items: center;
	background-image: url(../assets/images/topography-overlay.png);
}

.capstone h1 {
	padding-bottom: 10px;
}

/* END CAPSTONE SECTION */

/* WORK SECTION */

.work {
	color: white;
}	

.work-section {
	padding-top: 20px;
	display: flex;
	flex-direction: row;
}	

.work .media
    {
      margin-top: 30px;  
    }  

.work .media :hover	
	{
		background: #ffffff;
		transition: all 0.3s ease-in;
	}	
	
.work .media-object	
    {
        border: 2px solid #ffffff;
        border-radius: 50%;
        color: #127f2c;
        font-size: 24px;
        margin-right: 24px;
        width: 45px;
        height: 45px;
        line-height: 40px;
        text-align: center;
        vertical-align: middle;
        /* transition: all 0.4s ease-in; */
    }	

/* END WORK SECTION */	

/* TECHNOLOGIES SECTION */

.tech-image {
	/* font-size: 1.125rem; */
	/* text-anchor: middle; */
	object-fit: scale-down;
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
	background-image:
		linear-gradient(rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)),
		url(../assets/images/topography-overlay.png);
  }

.card
{
	box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 12px;
}

/* END TECHNOLOGIES SECTION */

.modal-body 
{
	text-align: justify;
}

